# ContextEcho

./: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  DATASET_CARD.md  DATA_USE_POLICY.md  DONATION_RELAY.md  DONOR_PRIVACY.md  LICENSE  MAINTAINER_DONATION_WORKFLOW.md  Makefile  README.md  REPRODUCE.md  pyproject.toml  requirements-donate.txt  requirements-maintainer.txt  requirements-relay.txt  requirements.txt
analysis/: analyze_anchor_variants.py  analyze_dual_surface_combined.py  analyze_session_validation.py  analyze_terminalbench.py  analyze_v2_full_trajectory.py  audit_compliance_all_cells.py  consolidate_12model_perm.py
demo_live/: README.md  index.html  server.py
deploy/: deploy_hf_relay.py
docs/: index.html  project_stats.json
donate/: __init__.py  __main__.py  cli.py  describe.py  discover.py  donate.py  minimize.py  redact.py  relay_server.py  submit.py  verify.py  web.py
harness/: __init__.py  clients.py  clients_cohere.py  clients_gemini.py  clients_mistral.py  clients_nvidia.py  clients_openrouter.py  clients_together.py  cost.py  judge.py  probes.py  retry.py  terminus_drifted.py  terminus_drifted_timed.py  timed_lite_llm.py
plotting/: build_framework_pptx.py  fig1a_persona_space.py  fig1b_drift_trajectory.py  fig2_forest_panelwide.py  fig_app_anchor_decay.py  fig_app_anchor_size.py  fig_app_crossjudge.py  fig_app_crosssession.py  fig_app_full25probes.py  fig_app_onset.py  fig_example_responses.py  fig_fig1_combined.py  fig_forest_mitigation.py  fig_forest_stressors.py  fig_framework.py  fig_session_validation.py  (+2 more)
(+134 files in other folders)
