[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextecho-donate"
version = "0.1.0"
description = "Local-first donation wizard for ContextEcho coding-agent sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ContextEcho contributors" }
]
keywords = ["coding agents", "benchmark", "redaction", "donation", "persona drift"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
  "spacy>=3.4.4,<4",
  "detect-secrets>=1.5.0",
  "huggingface_hub>=1.0.0",
  "tqdm>=4.67.0",
]

[project.urls]
Homepage = "https://github.com/Accenture/ContextEcho"
Repository = "https://github.com/Accenture/ContextEcho"
Issues = "https://github.com/Accenture/ContextEcho/issues"

[project.scripts]
contextecho-donate = "donate.cli:main"

[tool.setuptools.packages.find]
include = ["donate*"]
